--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,10 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css"
+            
+            
             ],
             "scripts": []
           },
@@ -87,7 +90,10 @@
               "src/assets"
             ],
             "styles": [
+           "@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css"
+          
+           
             ],
             "scripts": []
           }
